--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: koxximus/flask_app
-          tag_with_ref: true
+          tags: latest
 
   deploy:
     runs-on: ubuntu-latest
